2013-04-29  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-elf32.sh: Fix typo in test of DO_SIM.

2013-04-26  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Add --sim/--no-sim
	* build-elf32.sh: Optionally build the simulator, depending on
	DO_SIM environment variable.

2013-04-22  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-kernel.sh: Put log in logs-4.8 directory and rename as
	kernel-build...

2013-04-19  Claudiu Zissulescu <Claudiu.Zissulescu@synopsys.com>

	* build-all.sh: Reorder component dirs, so GCC is last.

2013-04-17  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-uclibc.sh: Delete spurious debugging line.

2013-04-16  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* run-tests.sh: Add options to select and de-select individual
	tools to test and set corresponding environment variables.
	* run-elf32-tests.sh, run-uclibc-tests.sh: Use environment
	variables to control which tests are run.

2013-04-16  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Add --isa-v1, --isa-v2 and --config-extra options
	to set ISA_CPU and CONFIG_EXTRA environment variables.
	* build-elf32.sh, build-uclibc.sh: Make use of ISA_CPU and
	CONFIG_EXTRA environment variables.
	* build-kernel.sh: Updated for 4.8 Linux build/

2013-04-10  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* diff-all-sh: New script.
	* diff-tests.sh: Remove redundant code.

2013-04-10  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* diff-tests.sh: New script.

2013-04-10  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* diff-tests.sh: New script.

2013-04-03  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* tag-release.sh: New script.

2013-04-03  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Allow --little-endian as an option
	* run-tests.sh: Tidy up commenting.

2013-04-03  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* run-elf32-tests.sh, run-uclibc-tests.sh: Create README in the
	results directory with details of the test run.