@@ -1,3 +1,9 @@
+2013-04-30  Jeremy Bennett <jeremy.bennett@embecosm.com>
+
+	* dejagnu/baseboards/arc-nsim.exp: Load nsim-extra.exp, initialize
+	port with nsim_open.
+	* dejagnu/nsim-extra.exp: New file.
+
 2013-04-29  Jeremy Bennett <jeremy.bennett@embecosm.com>
 
 	* build-elf32.sh: Fix typo in test of DO_SIM.
